# fuseline

./: CHANGELOG.md  LICENSE  README.md  fuseline.cabal
.circleci/: config.yaml  config.yml
examples/: Main.hs
src/System/Console/: Fuseline.hs
