cabal-version:       2.4

name:                fuseline
version:             0.1.0.0
synopsis:            Library for building REPLs with fused-effects
description:         Library with a few effects and carriers for building
                     REPLs with simple configs.
homepage:            github.com/johnchildren/fuseline
bug-reports:         github.com/johnchildren/fuseline/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Children
maintainer:          john.a.children@gmail.com
category:            Development
extra-source-files:  CHANGELOG.md
                   , README.md


source-repository head
  type:     git
  location: https://github.com/johnchildren/fuseline/


common dependencies
  build-depends:       base >= 4.9 && < 4.13
                     , text ^>=1.2.0.0
                     , fused-effects ^>=0.5.0.0


common warning-flags
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wincomplete-patterns


library
  import:              dependencies, warning-flags
  exposed-modules:     System.Console.Fuseline
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite examples
  import:              dependencies, warning-flags
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       fuseline
                     , tasty ^>=1.2.0.0
                     , tasty-hspec ^>=1.1.0.0
  hs-source-dirs:      examples
  default-language:    Haskell2010
